--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>A Pen by  BaduHuang</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
+  <title>A Pen by BaduHuang</title>
 
-  
+
+  <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body>
 
   <div id="game-wrapper">
-    <h1 class="title">ReactJS Slide Puzzle</h1>
+    <h1 class="title">Puzzle Practice</h1>
     <div id="game-container"></div>
-</div>
+  </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.11.1/react.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
+  <script src="js/index.js"></script>
 </body>
 
 </html>
