--- a/simple-react-login-form/login.html
+++ b/simple-react-login-form/login.html
@@ -17,7 +17,7 @@
   <div id="app"></div>
   <script src='https://npmcdn.com/react@15.3.0/dist/react.min.js'></script>
   <script src='https://npmcdn.com/react-dom@15.3.0/dist/react-dom.min.js'></script>
-  <script src="js/index.js"></script>
+  <script src="js/login.js"></script>
 
 
 
